tests/ui/generics/binder-arg-overflow-regression-133613.stderr
error[E0658]: return type notation is experimental
  --> $DIR/binder-arg-overflow-regression-133613.rs:12:47
   |
LL |     fn stream(&self) -> impl IntFactory<stream(..): IntFactory<stream(..): Send>>;
   |                                               ^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = help: add `#![feature(return_type_notation)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: return type notation is experimental
  --> $DIR/binder-arg-overflow-regression-133613.rs:12:70
   |
LL |     fn stream(&self) -> impl IntFactory<stream(..): IntFactory<stream(..): Send>>;
   |                                                                      ^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = help: add `#![feature(return_type_notation)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0391]: cycle detected when looking up late bound vars inside `IntFactory::stream`
  --> $DIR/binder-arg-overflow-regression-133613.rs:12:5
   |
LL |     fn stream(&self) -> impl IntFactory<stream(..): IntFactory<stream(..): Send>>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which requires resolving lifetimes for `IntFactory::stream`...
   = note: ...which requires computing function signature of `IntFactory::stream`...
   = note: ...which again requires looking up late bound vars inside `IntFactory::stream`, completing the cycle
   = note: cycle used when computing type of `IntFactory::stream`
   = note: for more information, see <https://rustc-dev-guide.rust-lang.org/overview.html#queries> and <https://rustc-dev-guide.rust-lang.org/query.html>

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0391, E0658.
For more information about an error, try `rustc --explain E0391`.
